<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="8dp"
    android:layout_margin="8dp"
    android:elevation="3dp"
    android:id="@+id/transactionItemRoot">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/transactionDescriptionItemTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_desc"
                android:textSize="20sp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"/>
            <TextView
                android:id="@+id/transactionAmountItemTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_amount"
                android:textSize="16sp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/transactionTypeItemTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#64000000"
            android:layout_marginTop="8dp"
            android:text="@string/dummy_type"/>
        <TextView
            android:id="@+id/transactionDateItemTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="#87000000"
            android:layout_marginTop="8dp"
            android:text="@string/dummy_date"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>