<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.example.expensetrackerv1.ui.home.fragments.newrecord.NewRecordViewModel"
            />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.fragments.newrecord.NewRecordFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center|left"
                android:layout_margin="16dp">
                <ImageView
                    android:onClick="@{viewModel.onBackButtonPressed}"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:paddingEnd="12dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:layout_marginEnd="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:src="@drawable/baseline_arrow_back_24"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="24sp"
                    android:gravity="center"
                    android:text="@string/record"/>
            </LinearLayout>


            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <RadioButton
                    android:id="@+id/radioBtnExpense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expense"
                    android:textSize="20sp"
                    android:padding="16dp"
                    android:background="@drawable/radio_button_background"
                    android:layout_marginEnd="24dp"/>
                <RadioButton
                    android:id="@+id/radioBtnIncome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:padding="16dp"
                    android:background="@drawable/radio_button_background"
                    android:text="@string/income"/>



            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dateInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="5dp"
                android:hint="@string/dummy_date">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dateEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="false"
                    android:clickable="true"
                    android:inputType="none"
                    android:onClick="@{viewModel.onDateClick}"
                    android:drawableEnd="@drawable/baseline_calendar_month_24"

               />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="5dp"
                android:hint="@string/write_something">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@={viewModel.description}"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_marginTop="28dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/total_amount"
                    android:textSize="24sp" />
                <EditText
                    android:id="@+id/amountEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:text="@={viewModel.transactionAmount}"
                    android:inputType="numberDecimal"/>
            </LinearLayout>

            <Button
                android:onClick="@{viewModel.onClickSave}"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:text="@string/save"
                android:layout_gravity="center"
                android:layout_margin="24dp"
                android:textSize="16sp"
                android:background="@drawable/button_background"
                />


        </LinearLayout>



    </FrameLayout>
</layout>