<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewmodel"
            type="com.example.expensetrackerv1.ui.home.fragments.dashboard.DashboardViewModel" />
    </data>
    <FrameLayout
        android:id="@+id/dashboardRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.fragments.dashboard.DashboardFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchView"
                android:layout_marginTop="36dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/searchview_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:iconifiedByDefault="false"
                android:hint="@string/search_here"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recent_transactions"
                android:layout_marginStart="16dp"
                android:textColor="#716D6D"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dashboardRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:listitem="@layout/transaction_item"/>

            <Button
                android:onClick="@{viewmodel.onAddNewBtnClick}"
                android:id="@+id/addNewBtn"
                android:layout_margin="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new"
                android:layout_gravity="center"/>


        </LinearLayout>


    </FrameLayout>
</layout>